--- a/styles/panes.less
+++ b/styles/panes.less
@@ -11,6 +11,10 @@
 atom-pane-container {
   atom-pane {
     background-color: lighten(@app-background-color, 4%);
+    
+    .item-views {
+        background:@app-background-color !important;
+    }
 
     &:focus {
       background-color: @app-background-color;
